--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -10,6 +10,6 @@
   </div>
 
   <p class="foot">JARED G KRAEMER PHOTOGRAPHY</p>
-  <p class="foot">COPYRIGHT {{copyrightYear}} // <a routerLink="/about" class="contact">CONTACT</a></p>
+  <p class="foot">COPYRIGHT {{copyrightYear}}</p>
 
 </footer>
