--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -14,8 +14,8 @@
       <a class="nav-item nav-link" routerLink="home" routerLinkActive="active">Home</a>
 
       <div class="dropdown show nav-item">
-        <a class="nav-item nav-link" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gallery
-            <i class="fa fa-angle-down"></i>
+        <a class="nav-item nav-link" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Gallery<i class="fa fa-angle-down"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <a class="nav-item nav-link dropdown-item" routerLink="nature" routerLinkActive="active">Nature</a>
