--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="white-bg container-fluid">
+<div class="container-fluid">
   <div class="row">
     <h2 class="heading">{{"Jared G. Kraemer Photography" | uppercase}}</h2>
   </div>
@@ -17,15 +17,6 @@
       <p>Jared G. Kraemer Photography is currently based out of Richmond, Virginia but Jared enjoys travelling the world to capture new
         experiences.
       </p>
-    </div>
-  </div>
-
-  <div id="contact" class="info row">
-    <div class="col">
-      <h5 class="about">INFORMATION:</h5>
-      <h6 class="about">For inquires, please e-mail us at
-        <a class="contact" href="mailto:jaredgkraemer@gmail.com"> jaredgkraemer@gmail.com</a>
-      </h6>
     </div>
   </div>
 </div>
