--- a/src/app/component/motion/motion.component.html
+++ b/src/app/component/motion/motion.component.html
@@ -6,6 +6,10 @@
     <iframe src="https://player.vimeo.com/video/188468628" width="640" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
 
+  <div class="vimeo embed-responsive embed-responsive-16by9">
+    <iframe src="https://player.vimeo.com/video/312016482" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+
   <div class="vimeo embed-responsive embed-responsive-21by9">
     <iframe src="https://player.vimeo.com/video/220074778" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
