--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="white-bg container-fluid">
   <div class="row">
     <h2 class="heading">{{"Jared G. Kraemer Photography" | uppercase}}</h2>
   </div>
