--- a/src/app/component/contact/contact.component.css
+++ b/src/app/component/contact/contact.component.css
@@ -1,5 +1,11 @@
-.about {
+.contact {
   margin: 1em;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 1px;
+}
+
+.email {
   text-align: center;
   text-decoration: none;
   letter-spacing: 1px;
