--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -24,7 +24,7 @@
   background-color: transparent;
 }
 
-/* If device screen is smaller than 768px 
+/* If device screen is smaller than 768px
  * Don't want it to be transparent if on mobile
  */
 @media (max-width: 768px) {
@@ -70,7 +70,8 @@
   letter-spacing: 0.1em;
 }
 
-.nav-item:hover, .nav-item:hover .fa {
+.nav-item:hover,
+.nav-item:hover .fa {
   color: #adadad;
   transition-duration: 0.7s;
   letter-spacing: 0.1em;
@@ -110,8 +111,10 @@
   margin: 0;
 }
 
-.dropdown-menu, .dropdown:hover .dropdown-menu {
-  left: -40px; /* Moves dropdown menu left so it is center under gallery */
+.dropdown-menu,
+.dropdown:hover .dropdown-menu {
+  left: -40px;
+  /* Moves dropdown menu left so it is center under gallery */
   max-height: 400px;
   opacity: 1;
 }
@@ -124,7 +127,8 @@
   background-color: #f1f1f1;
 }
 
-.dropdown-item.active, .dropdown-item:active {
+.dropdown-item.active,
+.dropdown-item:active {
   background-color: transparent;
   transition: all 0.3s ease-out;
 }
