--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -9,7 +9,6 @@
     </div>
   </div>
 
-  <p class="foot">JARED G KRAEMER PHOTOGRAPHY</p>
-  <p class="foot">COPYRIGHT © {{copyrightYear}}</p>
-
+  <p class="foot font">JARED G KRAEMER PHOTOGRAPHY</p>
+  <p class="foot font">COPYRIGHT © {{copyrightYear}}</p>
 </footer>
