--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -9,7 +9,7 @@
   </button>
 
   <div class="collapse navbar-collapse navbar-right" id="myNavList">
-    <div class="nav navbar-nav">
+    <div class="nav navbar-nav font">
 
       <a class="nav-item nav-link" routerLink="home" routerLinkActive="active">Home</a>
 
