updating to angular 8

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-header></app-header>
+<!-- <new-header></new-header> -->
+<header></header>
 
 <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+<footer></footer>
