--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer [ngClass]="{'about-footer': isAbout, 'regular-footer': !isAbout}" class="container-fluid text-center">
+<div [ngClass]="{'about-footer': isAbout, 'regular-footer': !isAbout}" class="footer container-fluid text-center">
   <div class="row">
     <div class="col-lg-12">
       <a href="https://www.instagram.com/jaredgkraemer" target="_blank" class="fa fa-instagram"></a>
@@ -8,4 +8,4 @@
   </div>
   <p class="foot font">JARED G KRAEMER PHOTOGRAPHY</p>
   <p class="foot font">COPYRIGHT © {{copyrightYear}}</p>
-</footer>
+</div>
