--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -21,7 +21,7 @@
 
 /* Navbar color changes on Route */
 .home-header {
-  background-color: transparent;
+  background-color: #ffffff44;
 }
 
 /* If device screen is smaller than 768px
