--- a/src/app/component/contact/contact.component.css
+++ b/src/app/component/contact/contact.component.css
@@ -38,38 +38,6 @@ a {
   margin-bottom: 24px;
 }
 
-.email, .mobile-email {
-  color: #007bff;
-  font-size: 24px;
-  margin: 0;
-}
-
-.email-wrapper {
-  text-align: center;
-}
-
-.email:hover {
-  cursor: pointer;
-  color: #0056b3;
-}
-
-.copied {
-  color: #808080;
-  text-align: center;
-  font-size: 14px;
-}
-
-.hidden {
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 1s, opacity 0.5s linear;
-}
-
-.visible {
-  opacity: 1;
-  transition: visibility 0s, opacity 0.5s linear;
-}
-
 .license {
   margin: 2em;
 }
@@ -77,4 +45,10 @@ a {
 .line {
   border-top: 1px solid #dddddd;
   margin-bottom: 2em;
+}
+
+.contact-btn-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 24px;
 }
