--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: #f2f2f2;
+  font-family: 'Tw Cen MT', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .container-width {
