updated home photo list

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -7,6 +7,7 @@
     <li data-target="#myCarousel" data-slide-to="3"></li>
     <li data-target="#myCarousel" data-slide-to="4"></li>
     <li data-target="#myCarousel" data-slide-to="5"></li>
+    <li data-target="#myCarousel" data-slide-to="6"></li>
   </ol>
 
   <div class="carousel-inner" role="listbox">
@@ -17,6 +18,10 @@
 
     <div class="carousel-item">
       <img class="d-block img-width" src="../../../assets/images/home/3-16x9.jpg">
+    </div>
+
+    <div class="carousel-item">
+      <img class="d-block img-width" src="../../../assets/images/home/7-16x9.jpg">
     </div>
 
     <div class="carousel-item">
