update to new header, carousel, and portfolio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<!-- <new-header></new-header> -->
-<header></header>
+<header [isHome]="isHome"></header>
 
-<router-outlet></router-outlet>
+<!-- <div class="container"> -->
+  <router-outlet></router-outlet>
+<!-- </div> -->
 
 <footer></footer>
