--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,15 +1,13 @@
-<div class="white-bg container-fluid">
-  <div class="row">
-    <h2 class="heading font">{{"Jared G. Kraemer Photography" | uppercase}}</h2>
+<div class="container">
+  <div class="heading-container">
+    <span class="heading">ABOUT ME</span>
   </div>
-  <div class="pic-bio row">
-    <div class="col-md">
-      <img class="d-block img-fluid portrait" src="../../../assets/images/author.jpg">
-    </div>
-    <div class="col-md bio">
+  <div class="about-container">
+    <img class="profile" src="../../../assets/images/author.jpg">
+    <div class="about-text">
       <p>Jared G. Kraemer is a Florida-born photographer who specializes in natural landscapes, urban architecture, beautiful portraits and stunning weddings. He fell in love with his first camera at 12 years old and has been honing his skills ever since.</p>
       <p>Over a decade after picking up his first camera, Jared has become an incredible source for professional photos of sweeping landscapes, magnificent architecture and lively events. Jared is comfortable shooting in all environments from the busy streets of Paris to crowded yachts for wedding ceremonies to the top of Half Dome in Yosemite National Park.</p>        
-      <p>Jared G. Kraemer Photography is currently based out of Washington D.C., but Jared enjoys traveling the world to capture new wonderful experiences.</p>
+      <p>Jared G. Kraemer Photography is currently based out of Washington D.C., but Jared enjoys traveling the world to capture new, wonderful experiences.</p>
     </div>
   </div>
 </div>
