--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -1,21 +1,23 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
-      <h4 class="contact">For all booking, licensing & print inquires</h4>
-      <div class="contact-btn-wrapper"><button (click)="mail()" type="button" class="btn btn-dark">CONTACT</button></div>
-
-      <div class="line"></div>
-
-      <h6 class="justify contact">Commercial use of my images is allowed only if expressly granted by Jared G. Kraemer. 'Commercial Use' regarding the use of images online or offline is defined very broadly. The determination of commercial or non-commercial use is based on the contextual use of the image. The determination is NOT based on the tax-filing status of the entity using the image nor on whether or not a financial transaction takes place. All of my photography is licensed under the <a href="https://creativecommons.org/licenses/by-nc-nd/3.0/" target="_blank">Attribution Non-Commercial No Derivatives 3.0 Unported License</a>. All commercial uses will incur a licensing fee based on several factors including, but not limited to:</h6>
-
-      <ul class="list contact">
-        <li><i class="fa fa-angle-right"></i>Type of Media (print, web, television, social media, etc)</li>
-        <li><i class="fa fa-angle-right"></i>Distribution Scale (number of copies printed, viewing audience size, exposure, etc)</li>
-        <li><i class="fa fa-angle-right"></i>Length of Use (1 year, 2 years, etc)</li>
-        <li><i class="fa fa-angle-right"></i>Prominence of Display (1/4 page, 1/2 page, full page, front cover, etc)</li>
-      </ul>
-
-      <h6 class="justify contact"></h6>
-    </div>
+  <span class="contact-header">For all booking, licensing & print inquires</span>
+  <div class="contact-btn-wrapper">
+    <button (click)="mail()" type="button" class="contact-btn">CONTACT</button>
   </div>
+
+  <div class="line"></div>
+
+  <p class="license">Commercial use of my images is allowed only if expressly granted by Jared G. Kraemer.
+    'Commercial Use' regarding the use of images online or offline is defined very broadly. The determination of
+    commercial or non-commercial use is based on the contextual use of the image. The determination is NOT based on the
+    tax-filing status of the entity using the image nor on whether or not a financial transaction takes place. All of my
+    photography is licensed under the <a href="https://creativecommons.org/licenses/by-nc-nd/3.0/"
+      target="_blank">Attribution Non-Commercial No Derivatives 3.0 Unported License</a>. All commercial uses will incur
+    a licensing fee based on several factors including, but not limited to:</p>
+
+  <ul class="list license">
+    <li>- Type of Media (print, web, television, social media, etc)</li>
+    <li>- Distribution Scale (number of copies printed, viewing audience size, exposure, etc)</li>
+    <li>- Length of Use (1 year, 2 years, etc)</li>
+    <li>- Prominence of Display (1/4 page, 1/2 page, full page, front cover, etc)</li>
+  </ul>
 </div>
