updated scss and package lock

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,5 +1,5 @@
-@import '../../../swatches.scss';
-@import '../../../breakpoints.scss';
+@import '../../../scss/swatches.scss';
+@import '../../../scss/breakpoints.scss';
 
 .header {
   position: fixed;
