--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -1,4 +1,4 @@
-@import '../../../breakpoints.scss';
+@import '../../../scss/breakpoints.scss';
 
 .home-container {
   margin-top: calc((100vw / 4) + 2.5rem);
