--- a/src/app/component/portfolio/portfolio.component.scss
+++ b/src/app/component/portfolio/portfolio.component.scss
@@ -1,5 +1,5 @@
-@import '../../../breakpoints.scss';
-@import '../../../swatches.scss';
+@import '../../../scss/breakpoints.scss';
+@import '../../../scss/swatches.scss';
 
 .portfolio {
   display: flex;
