--- a/src/app/component/about/about.component.scss
+++ b/src/app/component/about/about.component.scss
@@ -1,5 +1,5 @@
-@import '../../../swatches.scss';
-@import '../../../breakpoints.scss';
+@import '../../../scss/swatches.scss';
+@import '../../../scss/breakpoints.scss';
 
 .container {
   margin-top: 4rem;
