--- a/src/app/component/carousel/carousel.component.scss
+++ b/src/app/component/carousel/carousel.component.scss
@@ -1,5 +1,5 @@
-@import '../../../swatches.scss';
-@import '../../../breakpoints.scss';
+@import '../../../scss/swatches.scss';
+@import '../../../scss/breakpoints.scss';
 
 .carousel-container {
   position: relative;
