updated overall design & footer placement

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <header [isHome]="isHome"></header>
-
-<!-- <div class="container"> -->
+<div class="site-content">
   <router-outlet></router-outlet>
-<!-- </div> -->
-
+</div>
 <footer></footer>
