--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="responsive-container about">
   <div class="heading-container">
-    <span class="heading">ABOUT ME</span>
+    <span class="heading">ABOUT</span>
   </div>
-  <div class="about-container">
+  <div class="profile-container">
     <img class="profile" src="../../../assets/images/author.jpg">
     <div class="about-text">
       <p>Jared G. Kraemer is a Florida-born photographer who specializes in natural landscapes, urban architecture, beautiful portraits and stunning weddings. He fell in love with his first camera at 12 years old and has been honing his skills ever since.</p>
