--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -1,10 +1,12 @@
-<div class="container">
+<div class="responsive-container">
   <span class="contact-header">For all booking, licensing & print inquires</span>
-  <div class="contact-btn-wrapper">
+  <div class="contact-btn-container">
     <button (click)="mail()" type="button" class="contact-btn">CONTACT</button>
   </div>
 
-  <div class="line"></div>
+  <div class="divider-container">
+    <div class="contact-divider"></div>
+  </div>
 
   <p class="license">Commercial use of my images is allowed only if expressly granted by Jared G. Kraemer.
     'Commercial Use' regarding the use of images online or offline is defined very broadly. The determination of
