--- a/src/app/component/events/events.component.scss
+++ b/src/app/component/events/events.component.scss
@@ -1,6 +1,5 @@
-.intro {
-  margin: 2em 2em 0 2em;
+.events-description {
+  margin: 2rem;
   text-align: center;
-  font-weight: 300;
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
