--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,15 +1,15 @@
 <div class="footer">
   <div class="footer-link-container">
     <a class="footer-link" href="https://www.instagram.com/jaredgkraemer" target="_blank">
-      <i class="fab fa-instagram"></i>
+      <span class="icon-instagram"></span>
     </a>
     <a class="footer-link" href="https://www.linkedin.com/in/jaredgkraemer" target="_blank">
-      <i class="fab fa-linkedin"></i>
+      <span class="icon-linkedin"></span>
     </a>
     <a class="footer-link" href="https://www.youtube.com/user/JKraemerProductions" target="_blank">
-      <i class="fab fa-youtube"></i>
+      <span class="icon-youtube"></span>
     </a>
   </div>
   <p class="footer-text">JARED G KRAEMER PHOTOGRAPHY</p>
-  <p class="footer-text">COPYRIGHT © {{year}}</p>
+  <p class="footer-text">COPYRIGHT © {{ year }}</p>
 </div>
