--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -10,9 +10,9 @@
 
   <div class="link-container collapse">
     <div (click)="menu()" class="link-text" [routerLink]="['/home']" routerLinkActive="active">HOME</div>
-    <div class="divider"></div>
+    <div class="header-divider"></div>
     <div (click)="menu()" class="link-text" [routerLink]="['/portfolio']" routerLinkActive="active">PORTFOLIO</div>
-    <div class="divider"></div>
+    <div class="header-divider"></div>
     <div (click)="menu()" class="link-text" [routerLink]="['/contact']" routerLinkActive="active">CONTACT</div>
   </div>
 
