--- a/src/app/component/carousel/carousel.component.html
+++ b/src/app/component/carousel/carousel.component.html
@@ -1,14 +1,14 @@
 <div class="carousel-container">
   <div class="carousel-btn prev" (click)="arrowClick('prev')">
-    <i class="fas fa-chevron-left"></i>
+    <i class="icon-chevron-left"></i>
   </div>
   <div class="carousel-btn next" (click)="arrowClick('next')">
-    <i class="fas fa-chevron-right"></i>
+    <i class="icon-chevron-right"></i>
   </div>
   <div class="indicators">
     <div *ngFor="let img of images; index as i" (click)="indicatorClick(i)" class="index"></div>
   </div>
   <div class="carousel" (transitionend)="transitionEnd($event)">
-    <img *ngFor="let img of images; index as i" class="slide" src="../../../assets/images/home/{{images[i]}}-16x9.jpg" />
+    <img *ngFor="let img of images; index as i" class="slide" src="../../../assets/images/home/{{ images[i] }}-16x9.jpg" />
   </div>
 </div>
