--- a/src/app/component/error/error.component.html
+++ b/src/app/component/error/error.component.html
@@ -1,3 +1,3 @@
-<div class="container-fluid error-page font">
-  <h2>Oops! This page does not exist.</h2>
+<div class="responsive-container error">
+  Oops! This page does not exist.
 </div>
