--- a/src/app/component/events/events.component.html
+++ b/src/app/component/events/events.component.html
@@ -1,7 +1,8 @@
-<div class="container-fluid container-width">
+<div class="responsive-container">
   <gallery-title></gallery-title>
-
-  <p class="intro">From 100+ person weddings to graduations and family photos, Jared G. Kraemer will deliver exceptional, high quality photographs everytime.</p>
-
+  <p class="events-description">
+    From 100+ person weddings to graduations and family photos, Jared G. Kraemer
+    will deliver exceptional, high quality photographs everytime.
+  </p>
   <gallery></gallery>
 </div>
