--- a/src/app/component/gallery-title/gallery-title.component.html
+++ b/src/app/component/gallery-title/gallery-title.component.html
@@ -1,1 +1,3 @@
-<div class="text-container"><h4 class="title font">{{title | uppercase}}</h4></div>
+<div class="title-container">
+  <p class="title">{{ title | uppercase }}</p>
+</div>
