--- a/src/app/component/motion/motion.component.html
+++ b/src/app/component/motion/motion.component.html
@@ -1,21 +1,47 @@
-<div class="container container-fluid">
-
+<div class="responsive-container">
   <gallery-title></gallery-title>
 
-  <div class="vimeo embed-responsive embed-responsive-21by9">
-    <iframe src="https://player.vimeo.com/video/188468628" width="640" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <div class="vimeo">
+    <iframe
+      class="ratio-21x9"
+      src="https://player.vimeo.com/video/188468628"
+      frameborder="0"
+      webkitallowfullscreen
+      mozallowfullscreen
+      allowfullscreen
+    ></iframe>
   </div>
 
-  <div class="vimeo embed-responsive embed-responsive-16by9">
-    <iframe src="https://player.vimeo.com/video/312016482" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <div class="vimeo">
+    <iframe
+      class="ratio-16x9"
+      src="https://player.vimeo.com/video/312016482"
+      frameborder="0"
+      webkitallowfullscreen
+      mozallowfullscreen
+      allowfullscreen
+    ></iframe>
   </div>
 
-  <div class="vimeo embed-responsive embed-responsive-21by9">
-    <iframe src="https://player.vimeo.com/video/220074778" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <div class="vimeo">
+    <iframe
+      class="ratio-21x9"
+      src="https://player.vimeo.com/video/220074778"
+      frameborder="0"
+      webkitallowfullscreen
+      mozallowfullscreen
+      allowfullscreen
+    ></iframe>
   </div>
 
-  <div class="vimeo embed-responsive embed-responsive-16by9">
-    <iframe src="https://player.vimeo.com/video/190951839" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  <div class="vimeo">
+    <iframe
+      class="ratio-16x9"
+      src="https://player.vimeo.com/video/190951839"
+      frameborder="0"
+      webkitallowfullscreen
+      mozallowfullscreen
+      allowfullscreen
+    ></iframe>
   </div>
-
 </div>
