--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,5 +1,6 @@
 @import './swatches.scss';
 @import './breakpoints.scss';
+@import './fonts.scss';
 
 * {
   font-family: 'Tw Cen MT', -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -31,7 +32,13 @@ ul {
   display: none; /* Chrome and Safari */
 }
 
-.container {
+.site-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.responsive-container {
   margin: 9rem auto 4rem auto;
   max-width: $max-width-xs;
   width: 100%;
@@ -54,49 +61,18 @@ ul {
   }
 }
 
+.divider {
+  border-bottom: 1px solid $gray-95;
 
-////////////////////////////////////////////////////////////////
-// .container-width {
-//   max-width: 1200px;
-// }
+  &-home {
+    width: 100%;
 
-// /* If device screen is smaller than 576px */
-// @media (max-width: 576px) {
-//   .fa {
-//     margin: 0.4em;
-//     font-size: 20px;
-//     color: black;
-//   }
+    @include md {
+      display: none;
+    }
+  }
 
-//   .container-fluid {
-//     padding: 0;
-//   }
-// }
-
-// /* If device screen is greater than 576px */
-// @media (min-width: 576px) {
-//   .fa {
-//     margin: 1em;
-//     font-size: 26px;
-//     color: black;
-//   }
-// }
-
-
-// .title {
-//   text-align: center;
-//   letter-spacing: 3px;
-//   margin: 2em 3em 0 3em;
-//   padding: 0.5em 0;
-// }
-
-// .text-container {
-//   background-color: white;
-//   box-shadow: 0px 2px 4px #a7a7a7;
-//   max-width: 250px;
-//   margin: 0 auto;
-// }
-
-// .font {
-//   font-family: 'Tw Cen MT', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-// }
+  &-contact {
+    margin-bottom: 2rem;
+  }
+}
