--- a/src/scss/swatches.scss
+++ b/src/scss/swatches.scss
@@ -17,6 +17,17 @@ $blue-80: #0063cc;
 $blue-90: #00438a;
 $blue-100: #002f5c;
 
+$linkedin: #0e76a8;
+$youtube: #c4302b;
+$instagram: #c13584;
+
+$btn: #62727b;
+$btn-hover: #37474f;
+$btn-active: #102027;
+
+$shadow: #a7a7a7;
+$shadow-light: #c2c2c2;
+
 /* Transparent */
 $white-20p: #ffffff33;
 $white-40p: #ffffff66;
