--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -12,7 +12,7 @@
     'Commercial Use' regarding the use of images online or offline is defined very broadly. The determination of
     commercial or non-commercial use is based on the contextual use of the image. The determination is NOT based on the
     tax-filing status of the entity using the image nor on whether or not a financial transaction takes place. All of my
-    photography is licensed under the <a href="https://creativecommons.org/licenses/by-nc-nd/3.0/"
+    photography is licensed under the <a class="contact-link" href="https://creativecommons.org/licenses/by-nc-nd/3.0/"
       target="_blank">Attribution Non-Commercial No Derivatives 3.0 Unported License</a>. All commercial uses will incur
     a licensing fee based on several factors including, but not limited to:</p>
 
