--- a/src/app/component/gallery-page/gallery-page.component.scss
+++ b/src/app/component/gallery-page/gallery-page.component.scss
@@ -22,6 +22,6 @@
   justify-content: center;
   flex-direction: column;
   cursor: pointer;
-  box-shadow: 0px 2px 6px #7a7a7a;
+  box-shadow: 0px 2px 6px $shadow;
   border-radius: 1px;
 }
