--- a/src/app/component/gallery-title/gallery-title.component.scss
+++ b/src/app/component/gallery-title/gallery-title.component.scss
@@ -1,4 +1,5 @@
 @import '../../../scss/breakpoints.scss';
+@import '../../../scss/swatches.scss';
 
 .title {
   text-align: center;
@@ -10,7 +11,7 @@
 
 .title-container {
   background-color: white;
-  box-shadow: 0px 2px 4px #a7a7a7;
+  box-shadow: 0px 2px 4px $shadow-light;
   max-width: 16rem;
   margin: 0 auto 2rem auto;
 
