--- a/src/app/component/gallery/gallery.component.scss
+++ b/src/app/component/gallery/gallery.component.scss
@@ -1,11 +1,18 @@
 @import '../../../scss/breakpoints.scss';
+@import '../../../scss/swatches.scss';
 
 img {
   cursor: pointer;
-  box-shadow: 0px 2px 6px #7a7a7a;
+  box-shadow: 0px 2px 6px $shadow;
   max-width: 100%;
   display: block;
   height: auto;
+  transition: box-shadow 0.2s ease-in-out;
+
+  &:hover {
+    transition: box-shadow 0.2s ease-in-out;
+    box-shadow: 0px 2px 18px $shadow-light;
+  }
 }
 
 .gallery-row {
@@ -24,6 +31,7 @@ img {
 .gallery-col {
   display: flex;
   margin: 0 1rem;
+  transition-duration: 0.3s;
 
   @include md {
     margin: 0 2rem;
