--- a/src/app/component/portfolio/portfolio.component.html
+++ b/src/app/component/portfolio/portfolio.component.html
@@ -8,7 +8,10 @@
         <img *ngIf="category === 'urban'" class="category" src="../../assets/images/{{ category }}/{{ thumbnails.urban }}.jpg" />
         <img *ngIf="category === 'human'" class="category" src="../../assets/images/{{ category }}/{{ thumbnails.human }}.jpg" />
         <img *ngIf="category === 'events'" class="category" src="../../assets/images/{{ category }}/{{ thumbnails.events }}.jpg" />
-        <img *ngIf="category === 'motion'" class="category" src="../../assets/images/{{ category }}/{{ thumbnails.motion }}.gif" />
+        <img *ngIf="category === 'space'" class="category" src="../../assets/images/{{ category }}/{{ thumbnails.space }}.jpg" />
+        <video *ngIf="category === 'motion'" class="video" autoplay loop>
+          <source src="../../assets/images/{{ category }}/{{ thumbnails.motion }}.mp4" type="video/mp4">
+        </video>
       </div>
     </ng-container>
   </div>
