--- a/src/app/component/gallery-page/gallery-page.component.scss
+++ b/src/app/component/gallery-page/gallery-page.component.scss
@@ -9,19 +9,12 @@
   }
 }
 
-.top {
-  background: $white;
-  position: fixed;
-  bottom: 10%;
-  right: 10%;
-  height: 3rem;
-  width: 6rem;
-  z-index: 3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  cursor: pointer;
-  box-shadow: 0px 2px 6px $shadow;
-  border-radius: 1px;
+.events-description {
+  margin: 0 2rem 2rem 2rem;
+  text-align: center;
+  font-size: 1.5rem;
+
+  @include md {
+    margin: 0 2rem 4rem 2rem;
+  }
 }
