--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -76,3 +76,20 @@ ul {
     margin-bottom: 2rem;
   }
 }
+
+.scroll-top {
+  background: $white;
+  position: fixed;
+  bottom: 10%;
+  right: 10%;
+  height: 3rem;
+  width: 6rem;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+  box-shadow: 0px 2px 6px $shadow;
+  border-radius: 1px;
+}
